[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oneModel"
authors = [
    {name = "Milos Korenciak", email = "Milos.Korenciak@GMail.com"},
]
maintainers = [
    {name = "Milos Korenciak", email = "Milos.Korenciak@GMail.com"},
]
description = "Common (relational) data classes template for whole app"
readme = "README.rst"
requires-python = ">=3.5"
keywords = ["pandas", "optimization", "lazy", "load", "column", "io", "computation"]
license = {text = "Unilicense"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "sqlalchemy>=1.4",
    #'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[project.optional-dependencies]
polars = ["polars"]
pyarrow = ["pyarrow"]
test = ["polars"]
# test = ["sqlalchemy>=1.2", "pack ==1.1, ==1.3"]

# [project.scripts]
# my-script = "my_package.module:function"
# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project.urls]
Homepage = "https://github.com/milos-korenciak/oneModel"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/milos-korenciak/oneModel.git"
Changelog = "https://github.com/milos-korenciak/oneModel/blob/main/README.rst"
